# CacheScope

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  perf.data.old  project_diagram.txt
.cache/clangd/index/: main.cpp.414AA6B7F94A849A.idx
include/: CMakeLists.txt
include/analysis/: AddressMapper.hpp  Analyzer.hpp  CacheLine.hpp  FalseSharing.hpp  HotFieldAnalysis.hpp
include/common/: Constants.hpp  Types.hpp  Utils.hpp  registry.hpp
include/dwarf/: DwarfContext.hpp  Extractor.hpp  StackObject.hpp
include/report/: JsonReport.hpp  Report.hpp  TextReport.hpp
include/runtime/: AllocationTracker.hpp  FalseSharingAnalysis.hpp  HeapAllocationTracker.hpp  MemAccess.hpp  Parser.hpp  PipeStream.hpp  SampleStats.hpp  ThreadTracker.hpp  Tracer.hpp  TracerConfig.hpp
src/: Analyzer.hpp  CMakeLists.txt  main.cpp
src/analysis/: Analyzer.cpp  CMakeLists.txt
src/dwarf/: CMakeLists.txt  DwarfContext.cpp  Extractor.cpp
src/dynamic/: CMakeLists.txt  mem_structs.hpp
src/hooks/: CMakeLists.txt  cs_alloc_hooks.cpp  cs_stack_hooks.cpp
src/runtime/: AllocationTracker.cpp  CMakeLists.txt  FalseSharingAnalysis.cpp  Parser.cpp  PipeStream.cpp  SampleStats.cpp  Tracer.cpp  TracerConfig.cpp
src/static/: CMakeLists.txt  DwarfContext.cpp  extractor.cpp  extractor.hpp  registry.cpp  registry.hpp  schema.hpp
src/test/: CMakeLists.txt  direct_share.cpp  false_share.cpp  fix_false_share.cpp  stack_fix_false_share.cpp  test.cpp
